--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "nodejs",
     "version": "1.0.0",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-        "dev": "vite"
+        "dev": "vite",
+        "start": "node src/app.js"
     },
     "keywords": [],
     "author": "",
@@ -14,9 +16,11 @@
         "vite-plugin-node": "^4.0.0"
     },
     "dependencies": {
+        "@ngrok/ngrok": "^1.4.1",
         "bcryptjs": "^2.4.3",
         "cloudinary": "^2.6.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
